@@ -2,6 +2,7 @@ Version 3.18
 
 * IMPROVEMENT: KSI_DataHash and KSI_DataHasher accept NULL as KSI context.
 * IMPROVEMENT: Updated example code in README.md.
+* IMPROVEMENT: Added KSI_TlvElement_removeElement function.
 
 Version 3.17
 
